--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,5 +9,6 @@ jobs:
     steps:
       - uses: cluebotng/ci-create-release@main
         with:
+          repo_name: '${{ github.repository }}'
           tag_name: '${{ github.ref }}'
           gh_app_key: '${{ secrets.CI_RELEASE_MAKER_APP_KEY }}'
